--- a/pages/signup.html
+++ b/pages/signup.html
@@ -98,7 +98,7 @@
         <input 
             type="text"
             id="dob"
-            placeholder="MM/DD/YY"
+            placeholder="MM/DD/YYYY"
             style="margin-left: 11em;width:400px;height:25px; font-size: 15px;"
         />
       </div>
