--- a/pages/signup.html
+++ b/pages/signup.html
@@ -32,7 +32,7 @@
     <h1 style="color: brown; text-align: center; padding-top: 1em; padding-bottom: 1em;">It only takes a minute to register for your account</h1>
   </div>
   <div class="signup-container">
-    <form id="signupform" action="home.html">
+    <form id="signupform" action="login.html">
     <div>
     <h3 style="margin-left: 2em;color: brown">Let's create your credentials</h3>
     <br/>
