--- a/pages/home.html
+++ b/pages/home.html
@@ -3,13 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Make Your Reservation|Bon Voyage!</title>
+	<link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
   <link rel = "stylesheet" href="../css/home.css"/>
 </head>
 <body>
   <header class="header">
     <div class = "container">
       <!-- <div id = "reserve">Reserve Now</div> -->
-          <h1 style="padding-left: 2em;">Bon Voyage!!!</h1>
+          <h1 style="padding-left: 2em;font-family: Open Sans;">Bon Voyage!!!</h1>
           <div style="margin-left: 45em;">
             <nav>
               <ul class="nav-links">
